downgrade to Scala 2.12.15, first demo test on Dataproc worked